Fix sticker printing
Department sent to

--- a/openmrs/apps/registration/app.json
+++ b/openmrs/apps/registration/app.json
@@ -32,8 +32,9 @@
         "defaultVisitType": "General",
         "conceptSetUI": {
             "Department Sent To": {
-                "required": false,
-                "dropdown": true
+                "required": true,
+                "dropdown": true,
+				"autocomplete":true
             },
             "Hospitals, Referred by, Data": {
                 "autocomplete": true,
